--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,15 @@
-{% set version = "1.4.9" %}
+{% set name = "amqp" %}
+{% set version = "2.1.4" %}
+{% set sha256 = "1378cc14afeb6c2850404f322d03dec0082d11d04bdcb0360e1b10d4e6e77ef9" %}
 
 package:
-    name: amqp
+    name: {{ name }}
     version: {{ version }}
 
 source:
-    fn: amqp-{{ version }}.tar.gz
-    url: https://pypi.python.org/packages/source/a/amqp/amqp-{{ version }}.tar.gz
-    md5: df57dde763ba2dea25b3fa92dfe43c19
+    fn: {{ name }}-{{ version }}.tar.gz
+    url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+    sha256: {{ sha256 }}
 
 build:
     number: 0
@@ -19,6 +21,7 @@ requirements:
         - setuptools
     run:
         - python
+        - vine >=1.1.3
 
 test:
     imports:
@@ -35,3 +38,4 @@ extra:
     recipe-maintainers:
         - anguslees
         - kwilcox
+        - frol
